<resources>
    <string name="app_name">Rupiksha</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="text_login_title">Welcome to Rupiksha</string>
    <string name="btn_text_login">Login</string>
    <string name="btn_text_sign_in">Sign UP</string>
    <string name="text_contact">Contact Us- +91 7004128310</string>
    <string name="text_mail">Email id- support@rupiksha.com</string>
    <string name="lbl_user_name">Mobile Number</string>
    <string name="placeholder_text_mobile_no">Enter Mobile Number</string>
    <string name="lbl_password">Password</string>
    <string name="placeholder_text_password">Enter Password</string>
    <string name="lbl_name">Name</string>
    <string name="placeholder_text_name">Enter User Name</string>
    <string name="lbl_fathername">Father Name</string>
    <string name="placeholder_text_fathername">Enter Father Name</string>
    <string name="lbl_firstname">Enter First Name</string>
    <string name="lbl_bank_holder_name">Enter Bank Holder Name</string>
    <string name="placeholder_text_firstname">Enter User First Name</string>
    <string name="placeholder_name">Enter Name</string>
    <string name="lbl_lastname">Enter Last Name</string>
    <string name="placeholder_text_lastname">Enter User Last Name</string>
    <string name="lbl_dob">DOB</string>
    <string name="lbl_otp">OTP</string>
    <string name="placeholder_text_dob">Enter DOB</string>
    <string name="placeholder_text_otp">Enter OTP</string>
    <string name="lbl_email">Email</string>
    <string name="placeholder_text_email">Enter Email</string>
    <string name="text_sign_in_title">Login and Start Journey With Us</string>
    <string name="text_forget_password">Forget Password ?</string>
    <string name="text_forget_pin">Forget Pin ?</string>
    <string name="text_create_account">Create New Account ? Sign Up</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_account">Already Have Account ? Login</string>
    <string name="text_login">Login</string>
    <string name="text_next">Next</string>
    <string name="text_skip">Skip</string>
    <string name="text_sign_up_title">Register Yourself to Our Network</string>
    <string name="text_select_role">Select Role</string>
    <string name="text_add_member">Add Member</string>
    <string name="txt_add_money">Add Money</string>
    <string name="text_accept_qr">Accept QR Code</string>
    <string name="text_dmt_register">DMT Register</string>
    <string name="text_dmt_login">DMT Login</string>
    <string name="txt_finish">Finish</string>
    <string name="text_intro_1">Unlock secure financial transactions with our  application, enabling AEPS services for seamless banking and transactions.</string>
    <string name="text_intro_2">Simplify bill payments for millions with our  application, empowering users to effortlessly settle bills through the secure BBPS.</string>
    <string name="text_intro_3">Stay connected  with our application, offering seamless Traveling api services for Bus and Flights.</string>
    <string name="text_verify_otp">Verify OTP</string>
    <string name="text_verify_pin">Verify PIN</string>
    <string name="text_otp_title">Verify Otp Number</string>
    <string name="text_pin_title">Verify Pin Number</string>
    <string name="text_pinuper_title">Two-Way Verification</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="expire_otp">The OTP will expire </string>
    <string name="text_two_factor_authentication_title">Two Factor Authentication</string>
    <string name="text_apes_kyc_verify">Aeps Kyc Verify</string>
    <string name="btn_verfiy_otp">Verify</string>
    <string name="text_home">Home</string>
    <string name="text_report">My Reports</string>
    <string name="text_wallet">Wallet</string>
    <string name="text_support">Support</string>
    <string name="text_profile">Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_terms_conditions">Terms &amp; Conditions</string>
    <string name="text_logout">Logout</string>
    <string name="btn_text_submit">Submit</string>
    <string name="btn_text_edit">Edit Profile</string>
    <string name="title_edit_profile">EditProfile</string>
    <string name="title_my_profile">My Profile</string>
    <string name="btn_verify_account">Verify Account</string>
    <string name="btn_add_account">Add Account</string>
    <string name="btn_shareQurcode">Share QRCode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_name">Name :</string>
    <string name="label_mobile_number">Mob. Number :</string>
    <string name="label_rrn">RRN :</string>
    <string name="lbl_quicktransfer">Quick Transfer : </string>
    <string name="lbl_qt_charge">Q Transfer Charge : </string>
    <string name="lbl_payout">Payout : </string>
    <string name="lbl_payout_charge">Payout Charge : </string>
    <string name="lbl_dmt">DMT : </string>
    <string name="lbl_dmt_charge">DMT Charge : </string>
    <string name="lbl_Total">Total : </string>
    <string name="label_email">Email-ID :</string>
    <string name="label_aadhaar">Aadhar Number :</string>
    <string name="label_pan">Pan Number :</string>
    <string name="label_address">Address :</string>
    <string name="label_contact">Contact Us</string>
    <string name="lbl_bank">Bank :</string>
    <string name="lbl_bname">Name :</string>
    <string name="label_qty">Quantity:</string>
    <string name="label_my_balance">My Balance</string>
    <string name="label_add_money">Add Money</string>
    <string name="rupees">₹</string>
    <string name="label_aeps_service">Banking Services</string>
    <string name="label_bbps_service">Bharat Connect Services</string>
    <string name="label_utility_service">Financial Services</string>
    <string name="label_other_service">Travel Services</string>
    <string name="label_view_all">View All</string>
    <string name="label_report">Transaction Reports</string>
    <string name="title_aeps_service">ICICI AEPS</string>
    <string name="title_aeps_twofa">2FA Authentication</string>
    <string name="title_aeps_ap_twofa">AP2FA Authentication</string>
    <string name="text_balance_enquiry_title">Balance Enquiry</string>
    <string name="text_cms_title">CMS Services</string>
    <string name="text_payout">Payout</string>
    <string name="text_withdrawal_title">Withdrawal</string>
    <string name="text_mini_statement_title">Mini Statement</string>
    <string name="text_aadhar_pay_title">Aadhar Pay</string>
    <string name="lbl_aadhar_card">Aadhar Card Number</string>
    <string name="placeholder_aadhar_card">Enter Aadhar Card Number</string>
    <string name="lbl_select_bank">Select Bank</string>
    <string name="lbl_select_account">Select Account</string>
    <string name="lbl_select_device">Select Device</string>
    <string name="lbl_enter_amount">Amount</string>
    <string name="lbl_enter_sender_name">Sender Name</string>
    <string name="placeholder_amount">Enter Amount</string>
    <string name="btn_check_balance">Check Balance</string>
    <string name="btn_check_statement">Check Statement</string>
    <string name="lbl_select_board">Select Option</string>
    <string name="lbl_K_number">K Number</string>
    <string name="placeholder_k_number">K Number</string>
    <string name="lbl_enter_date">Date</string>
    <string name="placeholder_date">Enter Date</string>
    <string name="btn_text_fetch_bill">Fetch Bill</string>
    <string name="lbl_K_id">K Number :</string>
    <string name="lbl_customer_name">Customer Name :</string>
    <string name="lbl_tx_id">Txn. ID :</string>
    <string name="lbl_amount">Amount :</string>
    <string name="lbl_remaining_amount">Remaining Amount :</string>
    <string name="lbl_txn_amount">Transaction Amount :</string>
    <string name="lbl_message">Message :</string>
    <string name="lbl_date">Date :</string>
    <string name="lbl_rrn">RRN :</string>
    <string name="lbl_status">Status :</string>
    <string name="lbl_txntype">Txn.Type :</string>
    <string name="label_amount">Amount</string>
    <string name="lbl_sender_name">Sender Name:</string>
    <string name="lbl_sender_mobile">Sender Mobile :</string>
    <string name="lbl_reciver_name">Reciever Name:</string>
    <string name="lbl_reciver_mobile">Reciever Mobile :</string>
    <string name="lbl_transation_title">Recent Transition History</string>
    <string name="lbl_bill_title">Bill Details</string>
    <string name="lbl_board">Electricity Board :</string>
    <string name="lbl_due_date">Due Date :</string>
    <string name="lbl_bill_date">Bill Date :</string>
    <string name="btn_paynow">Pay Now</string>
    <string name="txt_view_more">View More</string>
    <string name="txt_view_less">View Less</string>
    <string name="lbl_service_name">Service Name :</string>
    <string name="lbl_operator_name">Operator Name :</string>
    <string name="lbl_type">Type :</string>
    <string name="lbl_mode">Mode :</string>
    <string name="lbl_opening_balance">Opening Balance : </string>
    <string name="lbl_closing_balance">Closing Balance : </string>
    <string name="txt_cb">Check Balance</string>
    <string name="txt_view_history">View History</string>
    <string name="txt_dwn_reciept">Download Reciept</string>
    <string name="tbl_raised_complained">Raised Complained</string>
    <string name="txt_share_reciept">Share Receipt</string>
    <string name="txt_wallet_history">Wallet History</string>
    <string name="txt_wallet_to_wallet">Wallet To Wallet</string>
    <string name="lbl_txn_type">Txn Type </string>
    <string name="lbl_txn_date">Date</string>
    <string name="lbl_txn_am">Amount</string>
    <string name="lbl_Narration">Narration</string>
    <string name="txt_pin">PIN</string>
    <string name="txt_otp">OTP</string>
    <string name="label_bbps_report">Reports</string>
    <string name="label_commission_plan">Commission Plan</string>
    <string name="lbl_account_number">Account Number</string>
    <string name="lbl_bank_name">Bank Name</string>
    <string name="placeholder_account_number">Enter Account Number</string>
    <string name="lbl_ifsc_code">IFSC Code</string>
    <string name="lbl_ifsc_code_dash">IFSC Code:</string>
    <string name="placeholder_ifsc_code">Enter IFSC Code</string>
    <string name="lbl_confirm_amount">Confirm Amount</string>
    <string name="placeholder_Confirm_Amount">Enter Confirm Amount</string>
    <string name="lbl_account_no">Account Number :</string>
    <string name="lbl_utr">UTR :</string>
    <string name="txt_imps">IMPS</string>
    <string name="txt_select">Select</string>
    <string name="txt_neft">NEFT</string>
    <string name="txt_rtgs">RTGS</string>
    <string name="lbl_area">Area</string>
    <string name="placeholder_area">Enter Area</string>
    <string name="lbl_pincode">Pincode</string>
    <string name="placeholder_pincode">Enter Pincode</string>
    <string name="lbl_district">District</string>
    <string name="placeholder_district1">Enter District</string>
    <string name="lbl_city">City</string>
    <string name="placeholder_city">Enter City</string>
    <string name="lbl_State">State</string>
    <string name="placeholder_state">Enter State</string>
    <string name="title_change_pin">Change Pin</string>
    <string name="title_commission_plan">Commission Plan</string>
    <string name="text_tooltip5_header1">Step 5</string>
    <string name="text_tooltip5_header2">AEPS section</string>
    <string name="text_tooltip5_des">In this section user can do balance enquiry, Adhar pay, Mini statement and Cash withdrawal</string>
    <string name="text_quit_tutorial">Quit tutorial</string>
    <string name="text_next_tutorial">Next</string>
    <string name="label_raised_ticket">Raised Ticket</string>
</resources>