<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_160sdp"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_minus4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/bg_selected_answer"
            android:orientation="vertical"
            android:paddingTop="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:fontFamily="@font/dmsans_regular"
                android:text="@string/text_tooltip5_header1"
                android:textColor="@color/color696969"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:fontFamily="@font/dmsans_bold"
                android:text="@string/text_tooltip5_header2"
                android:textColor="@color/color1F1F1F"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:fontFamily="@font/dmsans_regular"
                android:text="@string/text_tooltip5_des"
                android:textColor="@color/color696969"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@color/colorE6E6E6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >

                <TextView
                    android:id="@+id/tvQuitTutorial"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/dmsans_regular"
                    android:text="@string/text_quit_tutorial"
                    android:padding="@dimen/_16sdp"
                    android:textColor="@color/colorA53B3B"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/dmsans_bold"
                    android:gravity="end"
                    android:text="@string/text_next_tutorial"
                    android:padding="@dimen/_16sdp"
                    android:textAllCaps="true"
                    android:textColor="@color/color182645"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_gravity="center"
            android:background="@drawable/bg_bottom_triangle" />

    </LinearLayout>

</layout>